version/0.21/_sources/api/solver/_autosummary/settings/direction_vector.rst.txt
:orphan:

.. _direction_vector:

direction_vector
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.direction_vector.direction_vector
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================================   =======================

Parent                                                             Summary

================================================   =======================
:ref:`momentum <momentum_1>`                           Help not available.

:ref:`momentum <momentum_2>`                           Help not available.

:ref:`momentum <momentum_3>`                           Help not available.

:ref:`momentum <momentum_8>`                           Help not available.

:ref:`recirculation_inlet <recirculation_inlet>`       Help not available.

================================================   =======================

