version/0.27/_sources/api/solver/_autosummary/settings/direction_vector.rst.txt
:orphan:

.. _direction_vector:

direction_vector
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.direction_vector
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`direction_vector_child <direction_vector_child>`


.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`momentum_1 <momentum_1>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_2 <momentum_2>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_3 <momentum_3>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_8 <momentum_8>`                                        Allows to change momentum model variables or settings.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

====================================================   =====================================================================

